Wrapped and position fixed

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,13 @@ html {
 
 body a {
     color: var(--font-color-light);
+    overflow-x: hidden !important;
+}
+
+.wrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
 
 /* --------------------------------------------------- */
@@ -145,6 +152,10 @@ header nav ul li:hover::after {
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+.showcase .text {
+    padding: 10px;
 }
 
 .showcase .text h1 {
